Add custom comments, admin overlay, email forwarding, UI polish
- Custom comment system (DynamoDB, expandable sections, seed feature)
- Admin mode overlay on main page (session-based auth, inline controls)
- Admin dashboard redesign (active/inactive split, scheduling)
- Email forwarding: hello@scrumble.cc -> jon@theatrico.org
- UI improvements: fighter backgrounds, mobile layout, favicon
- Updated documentation (AGENTS.md, IMPLEMENTATION_NOTES.md)
- Enhanced .gitignore (media, Python, secrets)

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,53 @@ logs/
 .DS_Store
 .context
 **/.context
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+venv/
+env/
+*.egg-info/
+
+# Node
+node_modules/
+*.log
+npm-debug.log*
+
+# Lambda deployment
+*.zip
+function.zip
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS
+Thumbs.db
+
+# Secrets
+.env
+.env.local
+samconfig.toml.local
+
+# Media (large files - store in S3)
+public/SCRUMBLE_POSTERS/
+*.png
+*.jpg
+*.jpeg
+*.gif
+*.mp4
+*.mov
+*.avi
+*.webm
+*.avif
+*.webp
+!public/scrumble_favicon.ico
+!public/white_duck_logo.png
+!public/berk.avif
+!public/bob_corker.avif
