--- a/template.yaml
+++ b/template.yaml
@@ -47,6 +47,16 @@ Resources:
         - Statement:
           - Effect: Allow
             Action:
+              - dynamodb:GetItem
+              - dynamodb:PutItem
+              - dynamodb:UpdateItem
+              - dynamodb:DeleteItem
+              - dynamodb:Query
+              - dynamodb:Scan
+            Resource: 'arn:aws:dynamodb:*:*:table/scrumble-comments'
+        - Statement:
+          - Effect: Allow
+            Action:
               - cloudwatch:PutMetricData
             Resource: '*'
       FunctionUrlConfig:
