--- a/template.yaml
+++ b/template.yaml
@@ -20,7 +20,10 @@ Resources:
     Type: AWS::DynamoDB::Table
     Properties:
       TableName: scrumble-data
-      BillingMode: PAY_PER_REQUEST
+      BillingMode: PROVISIONED
+      ProvisionedThroughput:
+        ReadCapacityUnits: 5
+        WriteCapacityUnits: 5
       AttributeDefinitions:
         - AttributeName: pk
           AttributeType: S
@@ -37,6 +40,7 @@ Resources:
     Properties:
       CodeUri: backend/
       Handler: app.handler
+      ReservedConcurrentExecutions: 10
       Environment:
         Variables:
           TABLE_NAME: !Ref ScrumbleTable
