Add matchup builder to admin panel, fix active matchup count, remove coming soon page

--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,10 @@ DEVOPS_GAP_ANALYSIS.md
 RESUME_UPDATES_DEVOPS.md
 scrumble_*.json
 list_all_data.py
+
+# Terraform
+terraform/.terraform/
+terraform/*.tfstate
+terraform/*.tfstate.backup
+terraform/bootstrap/**/.terraform/
+terraform/bootstrap/**/terraform.tfstate*
